--- a/package.json
+++ b/package.json
@@ -27,5 +27,24 @@
       "prettier --parser=typescript --write"
     ]
   },
-  "homepage": "https://github.com/Gumball12/ts-rollup-npm-vite-boilerplate#readme"
+  "homepage": "https://github.com/Gumball12/ts-rollup-npm-vite-boilerplate#readme",
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.6",
+    "@typescript-eslint/parser": "^5.3.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.1.0",
+    "jest": "^27.3.1",
+    "lint-staged": "^11.2.6",
+    "prettier": "^2.4.1",
+    "rollup": "^2.59.0",
+    "rollup-plugin-dts": "^4.0.0",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-uglify": "^6.0.4",
+    "ts-jest": "^27.0.7",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.4",
+    "vite": "^2.6.13"
+  }
 }
