--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "dist/index.d.ts"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand",
+    "lint": "eslint --ext .ts ./src/**.ts",
+    "clean": "rm -rf ./dist",
+    "start": "npm run build:sandbox",
+    "build": "npm run clean && npm run test && cross-env NODE_ENV=production node ./scripts/build.js",
+    "build:watch": "npm run clean && npm run test && cross-env NODE_ENV=watch node ./scripts/build.js",
+    "build:sandbox": "npm run clean && npm run test && cross-env NODE_ENV=sandbox node ./scripts/build.js"
   },
   "repository": {
     "type": "git",
@@ -35,8 +41,10 @@
     "@typescript-eslint/parser": "^5.3.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.1.0",
+    "htm": "^3.1.0",
     "jest": "^27.3.1",
     "lint-staged": "^11.2.6",
+    "preact": "^10.5.15",
     "prettier": "^2.4.1",
     "rollup": "^2.59.0",
     "rollup-plugin-dts": "^4.0.0",
