--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: 16
           cache: 'pnpm'
           registry-url: 'https://registry.npmjs.org'
-          scope: '@gumball12'
+          scope: '@your-npm-account-name'
 
       - uses: actions/cache@v2
         id: pnpm-cache
